change margin and gap (need to be really fixed !!)

--- a/web/index.css
+++ b/web/index.css
@@ -64,7 +64,7 @@
      display: flex;
      flex-direction: row;
      align-items: center;
-     gap: 10px;
+     gap: 12px;
 
  }
 
@@ -95,18 +95,15 @@
 
  #main {
 
-
-     margin-top: 25px;
      display: flex;
      flex-direction: column;
-
 
  }
 
  #main-left {
 
      display: flex;
-     gap: 25px;
+     gap: 17px;
      flex-wrap: wrap;
 
 
